# serde-types

./: Cargo.toml
projects/package-name/: Cargo.toml
projects/package-name/src/: lib.rs
projects/package-name/src/methods/: mod.rs
projects/package-name/tests/: main.rs
projects/serde-types/: Cargo.toml
projects/serde-types/src/: lib.rs
projects/serde-types/src/parsing/: der.rs  errors.rs
projects/serde-types/src/standard/reader/: mod.rs
src/: lib.rs
src/about_vector/: der.rs  iter.rs  mod.rs  ser.rs
src/parsing/: mod.rs
src/standard/writer/: mod.rs
tests/: main.rs
