[package]
name = "package-key"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A case-insensitive, normalized string, suitable as a package name."
repository = "https://github.com/oovm/serde-types"
documentation = "https://docs.rs/package-name"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.155"
serde_derive = "1.0.155"

[dev-dependencies]
serde_json = "1.0.94"

[features]
default = []
