[package]
name = "serde-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A case-insensitive, normalized string, suitable as a package name."
repository = "https://github.com/oovm/serde-types"
documentation = "https://docs.rs/package-name"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []
